<?xml version="1.0" encoding="utf-8"?>
<Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="45sp"
         android:background="@color/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/relativeLayout"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="match_parent">

        <ImageView android:id="@+id/toolbar_main_logo"
                   android:layout_width="0sp"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="8sp"
                   android:paddingTop="2sp"
                   android:paddingBottom="2sp"
                   android:paddingStart="5sp"
                   android:scaleType="fitStart"
                   android:src="@drawable/logo"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintWidth_default="percent"
                   app:layout_constraintWidth_percent="0.5"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"
                   android:contentDescription="@string/login_logo_description"/>

        <TextView android:id="@+id/toolbar_main_store_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="10sp"
                  android:layout_marginTop="5sp"
                  android:text="@string/toolbar_store_label"
                  android:textColor="@color/colourWhite"
                  android:textSize="12sp"
                  android:textStyle="bold"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintEnd_toStartOf="@id/toolbar_main_store"/>

        <TextView android:id="@+id/toolbar_main_store"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="8sp"
                  android:layout_marginTop="5sp"
                  android:textColor="@color/colourWhite"
                  android:textSize="12sp"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"/>

        <TextView android:id="@+id/toolbar_main_user_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="5sp"
                  android:text="@string/toolbar_user_label"
                  android:textColor="@color/colourWhite"
                  android:textSize="12sp"
                  android:textStyle="bold"
                  app:layout_constraintTop_toBottomOf="@+id/toolbar_main_store_label"
                  app:layout_constraintEnd_toStartOf="@+id/toolbar_main_user"/>

        <TextView android:id="@+id/toolbar_main_user"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="8sp"
                  android:textColor="@color/colourWhite"
                  android:textSize="12sp"
                  app:layout_constraintTop_toBottomOf="@+id/toolbar_main_store"
                  app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</Toolbar>